@@ -8,6 +8,7 @@ Log of changes:	tilp (cables, calcs, files, ticonv)
 	like 'My Files' are not opened properly)
 	- fixed sending of vars into archive thru the App node
 	- Titanium/USB dumper is now launched remotely
+	- bug #1662383: V200 replies as busy but screenshot is working anyways
 	
 - 28/09/2006, version 1.01 (1.0.3, 1.0.2, 1.0.2, 1.0.1): roms
 	- as stated by Benjamin, replaced snprintf by g_snprintf which is safer
